<resources>
    <string name="app_name">FirstDay</string>
    <string name="userName">用户名:</string>
    <string name="userPSD">密　码:</string>
    <string name="login">登录</string>
    <string name="cb_remberPWD">记住密码</string>
    <string name="bt_register">注册</string>
    <string name="tv_entryUserName">请输入手机号或邮箱</string>
    <string name="edit_entryUserPwd">请输入密码</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_layout">登录界面</string>
    <string name="enterUserName">请输入用户名</string>
    <string name="enterPwd">请输入密码</string>
    <string name="remberPwd">记住密码</string>
    <string name="fra_login">登录</string>
</resources>
