<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="70dip">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:text="@string/login_layout"
            android:textColor="#f2be03"
            android:textSize="20sp" />

        <FrameLayout
            android:id="@+id/username_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_text">

            <EditText
                android:id="@+id/username"
                android:layout_width="300dip"
                android:layout_height="50dip"
                android:layout_marginTop="5dip"
                android:hint="@string/enterUserName"
                android:inputType="text"></EditText>



        </FrameLayout>
        <ListView
            android:layout_below="@id/login_text"
            android:layout_alignParentRight="true"

            android:id="@+id/lv_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ListView>


        <EditText
            android:id="@+id/password"
            android:layout_width="300dip"
            android:layout_height="50dip"
            android:layout_below="@id/username_layout"
            android:hint="@string/enterPwd"
            android:inputType="textPassword"></EditText>

        <RelativeLayout
            android:id="@+id/remember_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginLeft="10dip">

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:checked="true"
                android:text="@string/remberPwd"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="#716b60" />
        </RelativeLayout>

        <Button
            android:id="@+id/login"
            android:onClick="onClick"
            android:layout_width="300dip"
            android:layout_height="50dip"
            android:layout_below="@id/remember_layout"
            android:text="@string/fra_login" />
    </RelativeLayout>

</RelativeLayout>